# rust_playground

./: .gitignore
actix_testapp/: Cargo.toml  appsettings.json  build.rs
actix_testapp/scripts/: init_db.sh
actix_testapp/src/: appsettings.rs  handlers.rs  lib.rs  main.rs
actix_testapp/src/appsettings/: load.rs  mod.rs
actix_testapp/src/tests/: health_check.rs
actix_testapp/tests/: health_check.rs
async_executor/: Cargo.toml
async_executor/src/: main.rs  timer_future.rs
big_factorial/: Cargo.toml
big_factorial/src/: main.rs
channels/src/: main.rs
console_app/: Cargo.toml
console_app/src/: main.rs
dynamic_lib/: Cargo.toml  ConsoleLoader.csproj  ConsoleLoader.sln
dynamic_lib/src/: Program.cs  lib.rs
euclid/: Cargo.toml
euclid/src/: main.rs
fibonacci/src/: main.rs
file_transfer/: Cargo.toml
file_transfer/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
linkedin_mcnamara/01_calculate_median/src/: main.rs
linkedin_mcnamara/02_find_unique_items/src/: main.rs
linkedin_mcnamara/03_print_any_text_type/: Cargo.toml
linkedin_mcnamara/03_print_any_text_type/src/: main.rs
linkedin_mcnamara/04_case_insensitive_sort/: Cargo.toml
linkedin_mcnamara/04_case_insensitive_sort/src/: main.rs
mandelbrot/src/: main.rs
mars_calc/src/: main.rs
mocking/: Cargo.toml
mocking/src/: lib.rs
mssql_odbc/: Cargo.toml
mssql_odbc/src/: main.rs
pair/src/: main.rs
pisano/: Cargo.toml
pisano/src/: main.rs
rust_autocomplete/src/: cpus.rs
self-reference/: Cargo.toml  lines.txt
self-reference/src/: main.rs
simple_test/src/: main.rs
stack_and_heap/src/: main.rs
sum/: Cargo.toml
sum/src/: main.rs
threadpool/: Cargo.toml
threadpool/src/: main.rs  threadpool.rs
threads/src/: main.rs
tokio-chat/: Cargo.toml
tokio-chat/src/: main.rs
trie/src/: main.rs  trie.rs  trie_tests.rs
winapi/: Cargo.toml
winapi/src/: main.rs
