[package]
name = "actix_testapp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_testapp"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.21.1",  features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
reqwest = "0.11"

# optimizing
[profile.release]
strip = true        # strips symbols from binary
opt-level = "s"     # optimization for binary size
lto = true          # link time optimization
codegen-units = 1   #  default = 16. Setting this to 1 may improve the performance of generated code, but may be slower to compile.