[package]
name = "actix_testapp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_testapp"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.21.1",  features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls", #tells sqlx to use the actix runtime for its futures and rustls as TLS backend
    "macros", #  gives us access to sqlx::query! and sqlx::query_as!, which we will be using extensively;
    "postgres", #  unlocks Postgres-speciАc functionality (e.g. non-standard SQL types);
    "uuid", #  adds support for mapping SQL UUIDs to the Uuid type from the uuid crate. We need it to work with our id column
    "chrono", # adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono cratee. We need it to work with our subscribed_at column;
    "migrate" # 
]

[dev-dependencies]
reqwest = "0.11"

# optimizing
[profile.release]
strip = true        # strips symbols from binary
opt-level = "s"     # optimization for binary size
lto = true          # link time optimization
codegen-units = 1   #  default = 16. Setting this to 1 may improve the performance of generated code, but may be slower to compile.